Extended Todo MVC example

--- a/example/todomvc/less/module-todolist.less
+++ b/example/todomvc/less/module-todolist.less
@@ -18,9 +18,13 @@
 		
 		> a {
 			margin-top: 5px;
-			margin-left: .5em;
 			width: 15px;
 			height:15px;
+		}
+		
+		> span {
+			display: inline-block;
+			width: 80%;
 		}
 	}
 }
@@ -33,6 +37,10 @@
 		float: left;
 	}
 	> button {
+		width: 20%;
 		margin-left: 1em;
+	}
+	> input {
+		width: 70%;
 	}
 }
