--- a/example/todomvc/todomvc.css
+++ b/example/todomvc/todomvc.css
@@ -6411,6 +6411,27 @@ body {
   height: 99%;
   text-align: center;
 }
+#module-about {
+  display: inline;
+  text-align: left;
+}
+#module-about > h3 {
+  padding-left: 2.5%;
+}
+#module-about > p {
+  padding-left: 5%;
+  margin-bottom: 2.5%;
+}
+#module-contact > div.container {
+  margin-top: 1em;
+  width: 50%;
+}
+#module-contact > div.container > div.row-fluid > .span4 > img {
+  width: 50%;
+}
+#module-contact > div.container > div.row-fluid > .span8 {
+  text-align: left;
+}
 #module-todolist {
   display: inline;
 }
@@ -6429,9 +6450,12 @@ body {
 }
 #module-todolist > ul > li > div > a {
   margin-top: 5px;
-  margin-left: .5em;
   width: 15px;
   height: 15px;
+}
+#module-todolist > ul > li > div > span {
+  display: inline-block;
+  width: 80%;
 }
 #module-todolist > form {
   *zoom: 1;
@@ -6461,5 +6485,9 @@ body {
   float: left;
 }
 #module-todolist > form > button {
+  width: 20%;
   margin-left: 1em;
+}
+#module-todolist > form > input {
+  width: 70%;
 }
